@@ -5425,12 +5425,13 @@ sub lang_yacc_target_hook
 						  INTERNAL))
 	  {
 	    my $condstr = $cond->subst_string;
-	    $output_rules .= ("$condstr${header}: $output\n"
-			      # Recover from removal of $header
-			      . "$condstr\t\@if test ! -f \$@; then \\\n"
-			      . "$condstr\t  rm -f $output; \\\n"
-			      . "$condstr\t  \$(MAKE) $output; \\\n"
-			      . "$condstr\telse :; fi\n");
+	    $output_rules .=
+	      "$condstr${header}: $output\n"
+	      # Recover from removal of $header
+	      . "$condstr\t\@if test ! -f \$@; then \\\n"
+	      . "$condstr\t  rm -f $output; \\\n"
+	      . "$condstr\t  \$(MAKE) $(AM_MAKEFLAGS) $output; \\\n"
+	      . "$condstr\telse :; fi\n";
 	  }
 	# Distribute the generated file, unless its .y source was
 	# listed in a nodist_ variable.  (&handle_source_transform
