@@ -1,5 +1,5 @@
 ## automake - create Makefile.in from Makefile.am
-## Copyright (C) 1994, 1995, 1996, 1997, 1998, 1999, 2001, 2003, 2004
+## Copyright (C) 1994, 1995, 1996, 1997, 1998, 1999, 2001, 2003, 2004, 2005
 ## Free Software Foundation, Inc.
 
 ## This program is free software; you can redistribute it and/or modify
@@ -24,7 +24,7 @@
 ## Recover from removal of CONFIG_HEADER
 	@if test ! -f $@; then \
 	  rm -f %STAMP%; \
-	  $(MAKE) %STAMP%; \
+	  $(MAKE) $(AM_MAKEFLAGS) %STAMP%; \
 	else :; fi
 
 
