@@ -1,5 +1,14 @@
 2005-08-07  Alexandre Duret-Lutz  <adl@gnu.org>
 
+	* automake.in (lang_yacc_target_hook): Use AM_MAKEFLAGS in recursive
+	$(MAKE) invocations.
+	* lib/am/texibuild.am (?GENERIC_INFO?%SOURCE_SUFFIX%%DEST_SUFFIX%):
+	Likewise.
+	* lib/am/texi-vers.am (%STAMPVTI%): Likewise.
+	* lib/am/remake-hdr.am (%CONFIG_H%): Likewise.
+	* Makefile.am (maintainer-check): Check for this.
+	Report from Stepan Kasal.
+
 	* m4/mkdirp.m4: Update misleading comment about `mkdir -p .'.
 	Prompted by Stepan Kasal.
 
